--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 	<nav id="nav"></nav>
 	<main id="main"></main>
 
+
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBldSnzDQqahQfjggueSauSqLmy6VIW1KI&">
+    </script>
 <script src="//www.parsecdn.com/js/parse-1.6.7.min.js"></script>
 <script type="text/javascript" src="./scripts/bundle.js"></script>
-<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBldSnzDQqahQfjggueSauSqLmy6VIW1KI&callback=initMap">
-    </script>
+
 </body>
 </html>
