--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html>
 <head>
 	<title></title>
-	 <link rel="stylesheet" type="text/css" href="./node_modules/skeleton-css/css/normalize.css">
-	<link rel="stylesheet" type="text/css" href="./node_modules/skeleton-css/css/skeleton.css">
+
+	<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<link type="text/css" rel="stylesheet" href="./node_modules/materialize-css/bin/materialize.css"  media="screen,projection"/>
+	<link rel="stylesheet" type="text/css" href="./node_modules/font-awesome/css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="./node_modules/react-input-calendar/styles/input-calendar.css">
 	<link rel="stylesheet" type="text/css" href="./styles/main.sass.css">
 </head>
 <body>
@@ -15,5 +18,7 @@
     </script>
 <script src="//www.parsecdn.com/js/parse-1.6.7.min.js"></script>
 <script type="text/javascript" src="./scripts/bundle.js"></script>
+<script type="text/javascript" src="./node_modules/jquery/dist/jquery.min.js"></script>
+<script type="text/javascript" src="./node_modules/materialize-css/dist/js/materialize.min.js"></script>
 </body>
 </html>
