--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title></title>
 
-	<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link type="text/css" rel="stylesheet" href="./node_modules/materialize-css/bin/materialize.css"  media="screen,projection"/>
 	<link rel="stylesheet" type="text/css" href="./node_modules/font-awesome/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="./node_modules/react-input-calendar/styles/input-calendar.css">
@@ -18,7 +18,6 @@
     </script>
 <script src="//www.parsecdn.com/js/parse-1.6.7.min.js"></script>
 <script type="text/javascript" src="./scripts/bundle.js"></script>
-<script type="text/javascript" src="./node_modules/jquery/dist/jquery.min.js"></script>
-<script type="text/javascript" src="./node_modules/materialize-css/dist/js/materialize.min.js"></script>
+<script type="text/javascript" src="./node_modules/materialize-css/bin/materialize.js"></script>
 </body>
 </html>
