added profile page, reservation table, corrected nav bar style

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
 	<nav id="nav"></nav>
 	<main id="main"></main>
-
-
+	<footer id="footer"></footer>
+		
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBldSnzDQqahQfjggueSauSqLmy6VIW1KI&">
     </script>
 <script src="//www.parsecdn.com/js/parse-1.6.7.min.js"></script>
